版本222-老板的图片

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div>
         <h1>我们的猪肉很好吃</h1>
         <h2>因为我们的老板买的是进口的饲料。</h2>
+        <img src="假装我们的很好.jpg" alt="">
     </div>
 </body>
 
