版本11-老板娘的照片

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div>
         <h1>我们的猪肉很好吃。</h1>
         <h2>因为我们老板娘尽心的照料猪。</h2>
+        <img src="老板娘的美照.jpg" alt="">
     </div>
 </body>
 
